# collateral_vault

./: Anchor.toml  Cargo.toml  DEMO.md  PERFORMANCE.md  README.md  collateral_vault_current_progress_testing_guide.md  package-lock.json  package.json  user2.json
backend/: ARCHITECTURE.md  BACKEND.md  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: config.rs  db.rs  main.rs  models.rs  solana.rs  tx.rs
backend/src/db/: mod.rs  schema.sql  vaults.rs
backend/src/routes/: health.rs  mod.rs  transactions.rs  vault.rs
programs/collateral_vault/: Cargo.toml
programs/collateral_vault/fuzz/: Cargo.toml
programs/collateral_vault/fuzz/fuzz_targets/: balances.rs
programs/collateral_vault/src/: error.rs  events.rs  lib.rs  state.rs  tests.rs
programs/collateral_vault/tests/: tests.rs
scripts/: collateral_demo.ts  config.ts  createVaultAta.ts  demo.ts  deposit.ts  derive.ts  init.ts  initVault.ts  initVaultAuthority.ts  lock.ts  pda.ts  pref.ts  setup.ts  state.json  transfer.ts  unlock.ts  utils.ts  withdraw.ts
tests/: collateral_vault.ts
