[workspace]
members = [ "backend",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom.git", tag = "v0.2.15" }
