[package]
name = "collateral-vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
borsh = "1.5"
base64 = "0.22"
bincode = "1.3"


# Solana
solana-client = "2.2.1"
solana-sdk = "2.2.1"

# DB (SQLite for simplicity)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
