[package]
name = "collateral-vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
chrono = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
borsh = "1.5"
base64 = "0.22"
bincode = "1.3"
spl-token = "4.0"
